FIX: Se arregló el CorsConfig.java para las peticiones del front